# anticopter

./: .clang-format  .gitignore  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  camera.h  camera_pins.h  config.h  connect_wifi.h  globals.h  http.h  i2c_simple_main.c  idf_component.yml  imu.h  init.h  led.h  main.c  old_main.c  pwm_control.h  udp.h
main/comms/: comms_config.h  comms_header.h  msg_handler.h  msg_header.h  msg_send.h  msg_type.h  networking.h
main/control/: pid.c  pid.h  pid_control.h  pwm_control.h
main/lis3mdl/: lis3mdl_reg.c  lis3mdl_reg.h
main/lsm6ds3/: lsm6ds3_reg.c
main/lsm6dsr/: lsm6dsr_reg.h
